// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Sidebar Responsive renders 1`] = `
<Fragment>
  <h2
    id="responsive-sidebar"
  >
    Responsive sidebar
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Sidebar
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
          },
          Object {
            "icon": "favorite",
            "name": "Favorites",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Sidebar SidebarText renders 1`] = `
<div
  className="col-md-12 col-lg-10 doc-body"
>
  <ExperimentalComponentAlert />
  <p
    className="lead"
  >
    Sidebars...
  </p>
  <StandardSidebar />
  <TwoLevels />
  <TabletMode />
  <Responsive />
</div>
`;

exports[`Component: Sidebar StandardSidebar renders 1`] = `
<Fragment>
  <h2
    id="sidebar-standard"
  >
    Standard sidebar
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Sidebar
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
          },
          Object {
            "icon": "favorite",
            "name": "Favorites",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
          },
        ]
      }
      vertsize="md"
      widesize="lg"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Sidebar TabletMode renders 1`] = `
<Fragment>
  <h2
    id="tablet-sidebar"
  >
    Tablet mode
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Sidebar
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
          },
          Object {
            "icon": "favorite",
            "name": "Favorites",
            "subItems": Array [
              "Music",
              "Movies",
              "Employees",
            ],
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
            "subItems": Array [
              "Email",
              "Information",
              "Other things",
            ],
          },
        ]
      }
      vertsize="md"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Sidebar TwoLevels renders 1`] = `
<Fragment>
  <h2
    id="twolevels-sidebar"
  >
    Standard sidebar with two levels
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Sidebar
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
          },
          Object {
            "icon": "favorite",
            "name": "Favorites",
            "subItems": Array [
              "Music",
              "Movies",
              "Employees",
            ],
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
            "subItems": Array [
              "Email",
              "Information",
              "Other things",
            ],
          },
        ]
      }
      vertsize="md"
      widesize="lg"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Sidebar renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <SidebarText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
